# HS24-keynote

./: .gitignore  HS24-keynote.lhs  Shake.hs
catena/: catena.cabal
catena/app/: Main.hs
catena/examples/: 99bottles.cat  greengrass.cat  hanoi.cat
catena/src/: Catena.hs
cats/: CHANGELOG.md  cats.cabal  test.cats
cats-full/examples/: 12days.cat  hanoi.cat
cats/app/: Main.hs
cats/src/: Cats.hs
diagrams/: Joy.hs  joy.pgf
