cabal-version:      3.0
name:               catena
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Brent Yorgey
maintainer:         byorgey@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Catena
    -- other-modules:
    -- other-extensions:
    build-depends:    base, text, megaparsec, parser-combinators, containers
    hs-source-dirs:   src
    default-language: GHC2021

executable catena
    import:           warnings
    -- other-modules:
    -- other-extensions:
    build-depends:    base, catena, text, containers
    hs-source-dirs:   app
    main-is:          Main.hs
    default-language: GHC2021
